feat: catch 시 로그 추가